Big-layout bug fix with width.

--- a/new-design/styles/layout-big.css
+++ b/new-design/styles/layout-big.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 #post-header {
-    width: 100%;
+    width: 660px;
     height: 180px;
     margin: -160px 0 0 -360px;
     position: absolute;
